// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`translatePostProps complex payloads should translate rich Adaptive Cards (columns, image, action set) 1`] = `
Array [
  Object {
    "is_subtle": undefined,
    "text": "Customer onboarding review",
    "type": "text",
  },
  Object {
    "is_subtle": true,
    "text": "Account AC-91822 requested enterprise provisioning with SSO and SCIM.",
    "type": "text",
  },
  Object {
    "content": Array [
      Object {
        "is_subtle": undefined,
        "text": "Account details",
        "type": "text",
      },
      Object {
        "columns": Array [
          Object {
            "items": Array [
              Object {
                "is_subtle": undefined,
                "text": "Company: Northwind Labs",
                "type": "text",
              },
              Object {
                "is_subtle": true,
                "text": "Seats: 2,500",
                "type": "text",
              },
              Object {
                "is_subtle": true,
                "text": "Plan: Enterprise Plus",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
          Object {
            "items": Array [
              Object {
                "is_subtle": undefined,
                "text": "Region: EU-West",
                "type": "text",
              },
              Object {
                "is_subtle": true,
                "text": "Data residency: Frankfurt",
                "type": "text",
              },
              Object {
                "is_subtle": true,
                "text": "SLA: 99.95%",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
          Object {
            "items": Array [
              Object {
                "alt_text": "Account logo",
                "image_style": "person",
                "size": "small",
                "type": "image",
                "url": "https://example.com/account-logo.png",
              },
            ],
            "type": "column",
            "width": "auto",
          },
        ],
        "type": "column_set",
      },
    ],
    "type": "container",
  },
  Object {
    "content": Array [
      Object {
        "is_subtle": undefined,
        "text": "Provisioning checklist",
        "type": "text",
      },
      Object {
        "columns": Array [
          Object {
            "items": Array [
              Object {
                "content": Array [
                  Object {
                    "is_subtle": undefined,
                    "text": "Identity",
                    "type": "text",
                  },
                  Object {
                    "is_subtle": undefined,
                    "text": "SAML metadata uploaded",
                    "type": "text",
                  },
                  Object {
                    "is_subtle": true,
                    "text": "SCIM token issued",
                    "type": "text",
                  },
                ],
                "type": "container",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
          Object {
            "items": Array [
              Object {
                "content": Array [
                  Object {
                    "is_subtle": undefined,
                    "text": "Infrastructure",
                    "type": "text",
                  },
                  Object {
                    "is_subtle": undefined,
                    "text": "Dedicated namespace created",
                    "type": "text",
                  },
                  Object {
                    "is_subtle": true,
                    "text": "Backup policy attached",
                    "type": "text",
                  },
                ],
                "type": "container",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
        ],
        "type": "column_set",
      },
      Object {
        "alt_text": "Provisioning diagram",
        "horizontal_alignment": "center",
        "size": "medium",
        "type": "image",
        "url": "https://example.com/provisioning-diagram.png",
      },
    ],
    "type": "container",
  },
  Object {
    "content": Array [
      Object {
        "action_id": "approve_provision",
        "style": "primary",
        "text": "Approve provisioning",
        "type": "button",
      },
      Object {
        "action_id": "request_changes",
        "style": "default",
        "text": "Request changes",
        "type": "button",
      },
      Object {
        "action_id": "reject_provision",
        "style": "danger",
        "text": "Reject",
        "type": "button",
      },
    ],
    "flow": "horizontal",
    "type": "container",
  },
  Object {
    "content": Array [
      Object {
        "action_id": "assign_reviewer",
        "style": "default",
        "text": "Assign reviewer",
        "type": "button",
      },
      Object {
        "action_id": "open_crm",
        "style": "default",
        "text": "Open CRM record",
        "type": "button",
      },
    ],
    "flow": "horizontal",
    "type": "container",
  },
]
`;

exports[`translatePostProps complex payloads should translate rich Block Kit (accessory, fields, image, select) 1`] = `
Array [
  Object {
    "text": "# Release approval workflow",
    "type": "text",
  },
  Object {
    "content": Array [
      Object {
        "columns": Array [
          Object {
            "items": Array [
              Object {
                "text": "*Build 2.41.0-rc3* is ready for production. Review the checklist below before approving.",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
          Object {
            "items": Array [
              Object {
                "action_id": "view_build",
                "style": "primary",
                "text": "View build",
                "type": "button",
              },
            ],
            "type": "column",
            "width": "auto",
          },
        ],
        "type": "column_set",
      },
    ],
    "type": "container",
  },
  Object {
    "text": "### Validation summary
- 1,284 unit tests passed
- 42 e2e scenarios passed
- 0 critical vulnerabilities",
    "type": "text",
  },
  Object {
    "content": Array [
      Object {
        "columns": Array [
          Object {
            "items": Array [
              Object {
                "text": "*Commit*",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
          Object {
            "items": Array [
              Object {
                "text": "\`a91f3c2\`",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
        ],
        "type": "column_set",
      },
      Object {
        "columns": Array [
          Object {
            "items": Array [
              Object {
                "text": "*Branch*",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
          Object {
            "items": Array [
              Object {
                "text": "\`release-2.41\`",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
        ],
        "type": "column_set",
      },
      Object {
        "columns": Array [
          Object {
            "items": Array [
              Object {
                "text": "*Artifacts*",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
          Object {
            "items": Array [
              Object {
                "text": "iOS, Android, Desktop",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
        ],
        "type": "column_set",
      },
      Object {
        "columns": Array [
          Object {
            "items": Array [
              Object {
                "text": "*Risk score*",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
          Object {
            "items": Array [
              Object {
                "text": "Low (2 open defects)",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
        ],
        "type": "column_set",
      },
      Object {
        "columns": Array [
          Object {
            "items": Array [
              Object {
                "text": "*Canary status*",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
          Object {
            "items": Array [
              Object {
                "text": "Green for 6h",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
        ],
        "type": "column_set",
      },
    ],
    "type": "container",
  },
  Object {
    "type": "divider",
  },
  Object {
    "content": Array [
      Object {
        "columns": Array [
          Object {
            "items": Array [
              Object {
                "text": "Deployment regions",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
          Object {
            "items": Array [
              Object {
                "alt_text": "World map",
                "size": "small",
                "title": undefined,
                "type": "image",
                "url": "https://example.com/world-map.png",
              },
            ],
            "type": "column",
            "width": "auto",
          },
        ],
        "type": "column_set",
      },
    ],
    "type": "container",
  },
  Object {
    "content": Array [
      Object {
        "columns": Array [
          Object {
            "items": Array [
              Object {
                "text": "*US*",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
          Object {
            "items": Array [
              Object {
                "text": "Ready",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
        ],
        "type": "column_set",
      },
      Object {
        "columns": Array [
          Object {
            "items": Array [
              Object {
                "text": "*EU*",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
          Object {
            "items": Array [
              Object {
                "text": "Ready",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
        ],
        "type": "column_set",
      },
      Object {
        "columns": Array [
          Object {
            "items": Array [
              Object {
                "text": "*APAC*",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
          Object {
            "items": Array [
              Object {
                "text": "Pending cache warm",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
        ],
        "type": "column_set",
      },
    ],
    "type": "container",
  },
  Object {
    "alt_text": "Release timeline",
    "size": "large",
    "title": "Rollout timeline",
    "type": "image",
    "url": "https://example.com/release-timeline.png",
  },
  Object {
    "content": Array [
      Object {
        "action_id": "approve_release",
        "style": "primary",
        "text": "Approve",
        "type": "button",
      },
      Object {
        "action_id": "reject_release",
        "style": "danger",
        "text": "Reject",
        "type": "button",
      },
      Object {
        "action_id": "rollout_strategy",
        "options": Array [
          Object {
            "text": "Immediate",
            "value": "immediate",
          },
          Object {
            "text": "10% canary",
            "value": "canary_10",
          },
          Object {
            "text": "25% canary",
            "value": "canary_25",
          },
          Object {
            "text": "Blue/green",
            "value": "blue_green",
          },
        ],
        "placeholder": "Rollout strategy",
        "type": "static_select",
      },
    ],
    "flow": "horizontal",
    "type": "container",
  },
  Object {
    "content": Array [
      Object {
        "action_id": "notify_channel",
        "options": Array [
          Object {
            "text": "#releases",
            "value": "releases",
          },
          Object {
            "text": "#engineering",
            "value": "engineering",
          },
          Object {
            "text": "#support",
            "value": "support",
          },
        ],
        "placeholder": "Notify channel",
        "type": "static_select",
      },
      Object {
        "action_id": "schedule_release",
        "style": undefined,
        "text": "Schedule",
        "type": "button",
      },
      Object {
        "action_id": "cancel_release",
        "style": undefined,
        "text": "Cancel",
        "type": "button",
      },
    ],
    "flow": "horizontal",
    "type": "container",
  },
]
`;

exports[`translatePostProps complex payloads should translate rich attachments (fields, media, footer, actions, multiple cards) 1`] = `
Array [
  Object {
    "text": "PagerDuty triggered for *production API* cluster",
    "type": "text",
  },
  Object {
    "accent_color": "#2d81ff",
    "border": true,
    "content": Array [
      Object {
        "content": Array [
          Object {
            "alt_text": "Attachment author icon",
            "max_height": 20,
            "max_width": 20,
            "size": "auto",
            "type": "image",
            "url": "https://example.com/author.png",
          },
          Object {
            "text": "[Incident Bot](https://example.com/author)",
            "type": "text",
          },
        ],
        "flow": "horizontal",
        "gap": "small",
        "type": "container",
      },
      Object {
        "text": "**[INC-9042: Elevated 5xx rate](https://example.com/report/9042)**",
        "type": "text",
      },
      Object {
        "columns": Array [
          Object {
            "items": Array [
              Object {
                "text": "Error budget burn is **12%** over the last hour. Customer-facing latency p95 exceeded 2.4s.",
                "type": "text",
              },
              Object {
                "alt_text": "Attachment image",
                "size": "medium",
                "type": "image",
                "url": "https://example.com/error-rate-chart.png",
              },
              Object {
                "content": Array [
                  Object {
                    "columns": Array [
                      Object {
                        "gap": "none",
                        "items": Array [
                          Object {
                            "text": "**Severity:**",
                            "type": "text",
                          },
                          Object {
                            "text": "SEV-1",
                            "type": "text",
                          },
                        ],
                        "type": "column",
                        "width": "stretch",
                      },
                      Object {
                        "gap": "none",
                        "items": Array [
                          Object {
                            "text": "**Region:**",
                            "type": "text",
                          },
                          Object {
                            "text": "us-east-1",
                            "type": "text",
                          },
                        ],
                        "type": "column",
                        "width": "stretch",
                      },
                    ],
                    "type": "column_set",
                  },
                  Object {
                    "columns": Array [
                      Object {
                        "gap": "none",
                        "items": Array [
                          Object {
                            "text": "**Started:**",
                            "type": "text",
                          },
                          Object {
                            "text": "2026-06-11 08:14 UTC",
                            "type": "text",
                          },
                        ],
                        "type": "column",
                        "width": "stretch",
                      },
                      Object {
                        "gap": "none",
                        "items": Array [
                          Object {
                            "text": "**Duration:**",
                            "type": "text",
                          },
                          Object {
                            "text": "37 minutes",
                            "type": "text",
                          },
                        ],
                        "type": "column",
                        "width": "stretch",
                      },
                    ],
                    "type": "column_set",
                  },
                  Object {
                    "content": Array [
                      Object {
                        "text": "**Impacted services:**",
                        "type": "text",
                      },
                      Object {
                        "text": "API gateway, auth, search indexer",
                        "type": "text",
                      },
                    ],
                    "flow": "vertical",
                    "gap": "none",
                    "type": "container",
                  },
                  Object {
                    "content": Array [
                      Object {
                        "text": "**Current hypothesis:**",
                        "type": "text",
                      },
                      Object {
                        "text": "Connection pool exhaustion on read replicas after cache stampede",
                        "type": "text",
                      },
                    ],
                    "flow": "vertical",
                    "gap": "none",
                    "type": "container",
                  },
                  Object {
                    "content": Array [
                      Object {
                        "text": "**Customer impact:**",
                        "type": "text",
                      },
                      Object {
                        "text": "Delayed message delivery for ~4% of active sessions",
                        "type": "text",
                      },
                    ],
                    "flow": "vertical",
                    "gap": "none",
                    "type": "container",
                  },
                  Object {
                    "columns": Array [
                      Object {
                        "gap": "none",
                        "items": Array [
                          Object {
                            "text": "**Next update:**",
                            "type": "text",
                          },
                          Object {
                            "text": "In 15 minutes or on status change",
                            "type": "text",
                          },
                        ],
                        "type": "column",
                        "width": "stretch",
                      },
                      Object {
                        "gap": "none",
                        "items": Array [
                          Object {
                            "text": "**Commander:**",
                            "type": "text",
                          },
                          Object {
                            "text": "@sre-oncall",
                            "type": "text",
                          },
                        ],
                        "type": "column",
                        "width": "stretch",
                      },
                    ],
                    "type": "column_set",
                  },
                ],
                "flow": "vertical",
                "gap": "medium",
                "type": "container",
              },
              Object {
                "content": Array [
                  Object {
                    "alt_text": "Attachment footer icon",
                    "max_height": 16,
                    "max_width": 16,
                    "size": "auto",
                    "type": "image",
                    "url": "https://example.com/footer.png",
                  },
                  Object {
                    "is_subtle": true,
                    "size": "small",
                    "text": "Generated by incident automation",
                    "type": "text",
                  },
                ],
                "flow": "horizontal",
                "gap": "small",
                "type": "container",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
          Object {
            "items": Array [
              Object {
                "alt_text": "Attachment image",
                "size": "small",
                "type": "image",
                "url": "https://example.com/thumb.png",
              },
            ],
            "type": "column",
            "width": "auto",
          },
        ],
        "type": "column_set",
      },
      Object {
        "content": Array [
          Object {
            "action_id": "ack",
            "cookie": "",
            "disabled": undefined,
            "style": "primary",
            "text": "Acknowledge",
            "tooltip": "",
            "type": "button",
          },
          Object {
            "action_id": "escalate",
            "cookie": "",
            "disabled": undefined,
            "style": "danger",
            "text": "Escalate",
            "tooltip": "",
            "type": "button",
          },
          Object {
            "action_id": "assignee",
            "cookie": "",
            "data_source": "",
            "disabled": undefined,
            "initial_option": "alice",
            "options": Array [
              Object {
                "text": "Alice Chen",
                "value": "alice",
              },
              Object {
                "text": "Bob Patel",
                "value": "bob",
              },
              Object {
                "text": "Carla Ruiz",
                "value": "carla",
              },
              Object {
                "text": "Dana Kim",
                "value": "dana",
              },
            ],
            "placeholder": "Assign commander",
            "type": "static_select",
          },
          Object {
            "action_id": "severity",
            "cookie": "",
            "data_source": "",
            "disabled": undefined,
            "initial_option": "1",
            "options": Array [
              Object {
                "text": "SEV-1",
                "value": "1",
              },
              Object {
                "text": "SEV-2",
                "value": "2",
              },
              Object {
                "text": "SEV-3",
                "value": "3",
              },
            ],
            "placeholder": "Severity",
            "type": "static_select",
          },
          Object {
            "action_id": "users",
            "cookie": "",
            "data_source": "users",
            "disabled": undefined,
            "initial_option": "",
            "options": undefined,
            "placeholder": "Page user",
            "type": "static_select",
          },
          Object {
            "action_id": "channels",
            "cookie": "",
            "data_source": "channels",
            "disabled": undefined,
            "initial_option": "",
            "options": undefined,
            "placeholder": "War room",
            "type": "static_select",
          },
        ],
        "flow": "horizontal",
        "gap": "medium",
        "type": "container",
      },
    ],
    "type": "container",
  },
  Object {
    "text": "Follow-up investigation thread",
    "type": "text",
  },
  Object {
    "accent_color": "#f2c744",
    "border": true,
    "content": Array [
      Object {
        "content": Array [
          Object {
            "alt_text": "Attachment author icon",
            "max_height": 20,
            "max_width": 20,
            "size": "auto",
            "type": "image",
            "url": "https://example.com/metrics.png",
          },
          Object {
            "text": "Metrics Explorer",
            "type": "text",
          },
        ],
        "flow": "horizontal",
        "gap": "small",
        "type": "container",
      },
      Object {
        "text": "**Replica lag correlation**",
        "type": "text",
      },
      Object {
        "columns": Array [
          Object {
            "items": Array [
              Object {
                "text": "Read replica lag climbed 8 minutes before the error spike. Cache miss ratio doubled during the same window.",
                "type": "text",
              },
              Object {
                "content": Array [
                  Object {
                    "columns": Array [
                      Object {
                        "gap": "none",
                        "items": Array [
                          Object {
                            "text": "**Replica set:**",
                            "type": "text",
                          },
                          Object {
                            "text": "rs-prod-read-3",
                            "type": "text",
                          },
                        ],
                        "type": "column",
                        "width": "stretch",
                      },
                      Object {
                        "gap": "none",
                        "items": Array [
                          Object {
                            "text": "**Max lag:**",
                            "type": "text",
                          },
                          Object {
                            "text": "18.4s",
                            "type": "text",
                          },
                        ],
                        "type": "column",
                        "width": "stretch",
                      },
                    ],
                    "type": "column_set",
                  },
                  Object {
                    "columns": Array [
                      Object {
                        "gap": "none",
                        "items": Array [
                          Object {
                            "text": "**Cache hit ratio:**",
                            "type": "text",
                          },
                          Object {
                            "text": "61% → 29%",
                            "type": "text",
                          },
                        ],
                        "type": "column",
                        "width": "stretch",
                      },
                      Object {
                        "gap": "none",
                        "items": Array [
                          Object {
                            "text": "**Top query:**",
                            "type": "text",
                          },
                          Object {
                            "text": "channel_members_by_ids",
                            "type": "text",
                          },
                        ],
                        "type": "column",
                        "width": "stretch",
                      },
                    ],
                    "type": "column_set",
                  },
                  Object {
                    "content": Array [
                      Object {
                        "text": "**Suggested action:**",
                        "type": "text",
                      },
                      Object {
                        "text": "Scale read pool + invalidate hot cache keys",
                        "type": "text",
                      },
                    ],
                    "flow": "vertical",
                    "gap": "none",
                    "type": "container",
                  },
                ],
                "flow": "vertical",
                "gap": "medium",
                "type": "container",
              },
              Object {
                "is_subtle": true,
                "size": "small",
                "text": "Attached from Grafana dashboard",
                "type": "text",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
          Object {
            "items": Array [
              Object {
                "alt_text": "Attachment image",
                "size": "small",
                "type": "image",
                "url": "https://example.com/replica-thumb.png",
              },
            ],
            "type": "column",
            "width": "auto",
          },
        ],
        "type": "column_set",
      },
      Object {
        "content": Array [
          Object {
            "action_id": "open_dashboard",
            "cookie": "",
            "disabled": undefined,
            "style": undefined,
            "text": "Open dashboard",
            "tooltip": "",
            "type": "button",
          },
          Object {
            "action_id": "create_ticket",
            "cookie": "",
            "disabled": undefined,
            "style": "primary",
            "text": "Create ticket",
            "tooltip": "",
            "type": "button",
          },
        ],
        "flow": "horizontal",
        "gap": "medium",
        "type": "container",
      },
    ],
    "type": "container",
  },
  Object {
    "accent_color": undefined,
    "border": true,
    "content": Array [
      Object {
        "text": "**Unsafe link title**",
        "type": "text",
      },
      Object {
        "text": "Title link must not render when URL is unsafe",
        "type": "text",
      },
    ],
    "type": "container",
  },
]
`;

exports[`translatePostProps complex payloads should translate rich mm_blocks (container, column_set, collapsible, select) 1`] = `
Array [
  Object {
    "accent_color": "primary",
    "background": "gray",
    "border": true,
    "content": Array [
      Object {
        "text": "**Fleet status** across regions",
        "type": "text",
      },
      Object {
        "type": "divider",
      },
      Object {
        "accent_color": "good",
        "border": true,
        "content": Array [
          Object {
            "is_subtle": true,
            "size": "small",
            "text": "Nested metrics panel",
            "type": "text",
          },
          Object {
            "columns": Array [
              Object {
                "gap": "small",
                "items": Array [
                  Object {
                    "text": "*North America*",
                    "type": "text",
                  },
                  Object {
                    "size": "small",
                    "text": "Healthy: 42",
                    "type": "text",
                  },
                  Object {
                    "is_subtle": true,
                    "size": "small",
                    "text": "Degraded: 2",
                    "type": "text",
                  },
                ],
                "type": "column",
                "width": "stretch",
              },
              Object {
                "gap": "small",
                "items": Array [
                  Object {
                    "text": "*Europe*",
                    "type": "text",
                  },
                  Object {
                    "size": "small",
                    "text": "Healthy: 37",
                    "type": "text",
                  },
                  Object {
                    "is_subtle": true,
                    "size": "small",
                    "text": "Degraded: 5",
                    "type": "text",
                  },
                ],
                "type": "column",
                "width": "stretch",
              },
              Object {
                "items": Array [
                  Object {
                    "alt_text": "Regional heatmap",
                    "horizontal_alignment": "center",
                    "max_height": 80,
                    "max_width": 120,
                    "size": "small",
                    "title": "Heatmap",
                    "type": "image",
                    "url": "https://example.com/heatmap.png",
                  },
                ],
                "type": "column",
                "width": "auto",
              },
            ],
            "gap": "medium",
            "type": "column_set",
          },
        ],
        "flow": "vertical",
        "gap": "medium",
        "type": "container",
      },
      Object {
        "columns": Array [
          Object {
            "items": Array [
              Object {
                "collapsed": true,
                "content": Array [
                  Object {
                    "content": Array [
                      Object {
                        "text": "INC-4412: API latency spike",
                        "type": "text",
                      },
                      Object {
                        "is_subtle": true,
                        "size": "small",
                        "text": "INC-4410: Replica lag",
                        "type": "text",
                      },
                      Object {
                        "action_id": "open_runbook",
                        "style": "primary",
                        "text": "Open runbook",
                        "tooltip": "View remediation steps",
                        "type": "button",
                      },
                    ],
                    "flow": "vertical",
                    "gap": "small",
                    "type": "container",
                  },
                ],
                "header": Array [
                  Object {
                    "text": "Incident queue (4)",
                    "type": "text",
                  },
                ],
                "type": "collapsible",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
          Object {
            "items": Array [
              Object {
                "collapsed": false,
                "content": Array [
                  Object {
                    "columns": Array [
                      Object {
                        "items": Array [
                          Object {
                            "text": "Staging: green",
                            "type": "text",
                          },
                        ],
                        "type": "column",
                        "width": "stretch",
                      },
                      Object {
                        "items": Array [
                          Object {
                            "text": "Prod: yellow",
                            "type": "text",
                          },
                        ],
                        "type": "column",
                        "width": "stretch",
                      },
                    ],
                    "type": "column_set",
                  },
                  Object {
                    "type": "divider",
                  },
                  Object {
                    "action_id": "rollback_prod",
                    "style": "danger",
                    "text": "Rollback",
                    "type": "button",
                  },
                ],
                "header": Array [
                  Object {
                    "text": "Deploy pipeline",
                    "type": "text",
                  },
                ],
                "type": "collapsible",
              },
            ],
            "type": "column",
            "width": "stretch",
          },
        ],
        "type": "column_set",
      },
    ],
    "flow": "vertical",
    "gap": "large",
    "max_height": "medium",
    "type": "container",
  },
  Object {
    "columns": Array [
      Object {
        "items": Array [
          Object {
            "action_id": "mm_env_select",
            "initial_option": "staging",
            "options": Array [
              Object {
                "text": "Development",
                "value": "dev",
              },
              Object {
                "text": "Staging",
                "value": "staging",
              },
              Object {
                "text": "Production",
                "value": "prod",
              },
              Object {
                "text": "Disaster recovery",
                "value": "dr",
              },
            ],
            "placeholder": "Environment",
            "type": "static_select",
          },
        ],
        "type": "column",
        "width": "stretch",
      },
      Object {
        "items": Array [
          Object {
            "action_id": "mm_team_select",
            "initial_option": "sre",
            "options": Array [
              Object {
                "text": "Platform",
                "value": "platform",
              },
              Object {
                "text": "Mobile",
                "value": "mobile",
              },
              Object {
                "text": "SRE",
                "value": "sre",
              },
            ],
            "placeholder": "Owning team",
            "type": "static_select",
          },
        ],
        "type": "column",
        "width": "stretch",
      },
      Object {
        "items": Array [
          Object {
            "action_id": "ack_all",
            "style": "primary",
            "text": "Acknowledge all",
            "type": "button",
          },
          Object {
            "action_id": "silence_1h",
            "text": "Silence 1h",
            "type": "button",
          },
        ],
        "type": "column",
        "width": "auto",
      },
    ],
    "type": "column_set",
  },
  Object {
    "alt_text": "Incident timeline",
    "horizontal_alignment": "left",
    "size": "large",
    "type": "image",
    "url": "https://example.com/timeline.png",
  },
]
`;

exports[`translatePostProps format priority should prefer blocks over cards and attachments when mm_blocks is absent 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "text": "*Hello* from Block Kit",
        "type": "text",
      },
    ],
    "type": "container",
  },
  Object {
    "type": "divider",
  },
  Object {
    "content": Array [
      Object {
        "action_id": "block_kit_demo",
        "style": undefined,
        "text": "OK",
        "type": "button",
      },
    ],
    "flow": "horizontal",
    "type": "container",
  },
]
`;

exports[`translatePostProps format priority should prefer cards over attachments when mm_blocks and blocks are absent 1`] = `
Array [
  Object {
    "is_subtle": undefined,
    "text": "Hello from an Adaptive Card",
    "type": "text",
  },
]
`;

exports[`translatePostProps format priority should prefer mm_blocks over blocks, cards, and attachments 1`] = `
Array [
  Object {
    "text": "Hello **from** mm blocks",
    "type": "text",
  },
  Object {
    "action_id": "mm_blocks_demo",
    "style": "primary",
    "text": "Sample action",
    "type": "button",
  },
]
`;

exports[`translatePostProps malformed inputs should fall through when mm_blocks is not an array and use attachments 1`] = `
Array [
  Object {
    "accent_color": undefined,
    "border": true,
    "content": Array [
      Object {
        "text": "fallback attachment",
        "type": "text",
      },
    ],
    "type": "container",
  },
]
`;

exports[`translatePostProps malformed inputs should keep valid mm_blocks and drop invalid siblings 1`] = `
Array [
  Object {
    "text": "Valid block",
    "type": "text",
  },
  Object {
    "action_id": "valid_btn",
    "text": "Good",
    "type": "button",
  },
]
`;

exports[`translatePostProps malformed inputs should skip invalid Block Kit blocks and keep valid sections 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "text": "Kept section",
        "type": "text",
      },
    ],
    "type": "container",
  },
]
`;

exports[`translatePostProps malformed inputs should skip invalid attachment entries and keep partial attachment content 1`] = `
Array [
  Object {
    "accent_color": undefined,
    "border": true,
    "content": Array [
      Object {
        "text": "Only body survives",
        "type": "text",
      },
      Object {
        "content": Array [
          Object {
            "action_id": "ok_select",
            "cookie": "",
            "data_source": "",
            "disabled": undefined,
            "initial_option": "",
            "options": Array [
              Object {
                "text": "Good",
                "value": "g",
              },
            ],
            "placeholder": "OK",
            "type": "static_select",
          },
        ],
        "flow": "horizontal",
        "gap": "medium",
        "type": "container",
      },
    ],
    "type": "container",
  },
]
`;

exports[`translatePostProps malformed inputs should skip non-AdaptiveCard entries and partial invalid card bodies 1`] = `
Array [
  Object {
    "is_subtle": undefined,
    "text": "Valid line",
    "type": "text",
  },
]
`;

exports[`translatePostProps malformed inputs should treat non-array interactive props as absent for format detection 1`] = `
Array [
  Object {
    "accent_color": undefined,
    "border": true,
    "content": Array [
      Object {
        "text": "uses attachments",
        "type": "text",
      },
    ],
    "type": "container",
  },
]
`;

exports[`translatePostProps simple payloads should translate Adaptive Cards 1`] = `
Array [
  Object {
    "is_subtle": undefined,
    "text": "Hello from an Adaptive Card",
    "type": "text",
  },
]
`;

exports[`translatePostProps simple payloads should translate Block Kit blocks 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "text": "*Hello* from Block Kit",
        "type": "text",
      },
    ],
    "type": "container",
  },
  Object {
    "type": "divider",
  },
  Object {
    "content": Array [
      Object {
        "action_id": "block_kit_demo",
        "style": undefined,
        "text": "OK",
        "type": "button",
      },
    ],
    "flow": "horizontal",
    "type": "container",
  },
]
`;

exports[`translatePostProps simple payloads should translate legacy attachments 1`] = `
Array [
  Object {
    "text": "Optional pretext",
    "type": "text",
  },
  Object {
    "accent_color": "#36a64f",
    "border": true,
    "content": Array [
      Object {
        "text": "Bot Author",
        "type": "text",
      },
      Object {
        "text": "**[Attachment title](https://example.com)**",
        "type": "text",
      },
      Object {
        "text": "Body *markdown* text",
        "type": "text",
      },
    ],
    "type": "container",
  },
]
`;

exports[`translatePostProps simple payloads should translate native mm_blocks 1`] = `
Array [
  Object {
    "text": "Hello **from** mm blocks",
    "type": "text",
  },
  Object {
    "action_id": "mm_blocks_demo",
    "style": "primary",
    "text": "Sample action",
    "type": "button",
  },
]
`;
